test/classes/bradc/weirdinit.good
Error: Variable 'a' used before it is defined (weirdinit.chpl:7)
